--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
   "author": "Kagami <moe.pascal@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/bluebird": "^3.5.24",
+    "@types/fs-extra": "^5.0.4",
+    "@types/glob": "^7.1.1",
     "@types/node": "^10.12.6",
-    "maketypes": "^1.1.2",
+    "bluebird": "^3.5.3",
+    "fs-extra": "^7.0.1",
+    "glob": "^7.1.3",
+    "json-ts": "^1.6.4",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
   },
