--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bluebird": "^3.5.3",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
-    "json-ts": "^1.6.4",
+    "quicktype": "^15.0.152",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
   },
