--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "Kagami <moe.pascal@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^7.2.1",
+    "@commitlint/config-conventional": "^7.1.2",
     "@types/bluebird": "^3.5.24",
     "@types/fs-extra": "^5.0.4",
     "@types/glob": "^7.1.1",
@@ -14,9 +16,18 @@
     "bluebird": "^3.5.3",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
+    "husky": "^1.1.4",
+    "lint-staged": "^8.0.4",
+    "prettier": "^1.15.2",
     "quicktype": "^15.0.152",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  }
 }
