--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "bluebird": "^3.5.3",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
+    "gts": "^0.9.0",
     "husky": "^1.1.4",
     "lint-staged": "^8.0.4",
     "prettier": "^1.15.2",
     "quicktype": "^15.0.152",
     "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.16.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.1.6"
   },
   "dependencies": {},
