--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@commitlint/cli": "^7.2.1",
     "@commitlint/config-conventional": "^7.1.2",
     "@types/bluebird": "^3.5.24",
+    "@types/faker": "^4.1.4",
     "@types/fs-extra": "^5.0.4",
     "@types/glob": "^7.1.1",
+    "@types/lodash": "^4.14.118",
     "@types/node": "^10.12.6",
     "bluebird": "^3.5.3",
+    "faker": "^4.1.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "gts": "^0.9.0",
     "husky": "^1.1.4",
     "lint-staged": "^8.0.4",
+    "lodash": "^4.17.11",
     "prettier": "^1.15.2",
     "quicktype": "^15.0.152",
     "ts-node": "^7.0.1",
