--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/glob": "^7.1.1",
     "@types/lodash": "^4.14.118",
     "@types/node": "^10.12.6",
+    "@types/prettier": "^1.13.2",
     "bluebird": "^3.5.3",
     "faker": "^4.1.0",
     "fs-extra": "^7.0.1",
