--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "kcsapi",
   "version": "0.0.0",
   "description": "Kantai Collection API TypeScript types",
-  "keywords": ["Kancolle", "Kantai Collection", "TypeScript"],
+  "keywords": [
+    "Kancolle",
+    "Kantai Collection",
+    "TypeScript"
+  ],
   "main": "index.ts",
   "repository": "git@github.com:KagamiChan/kcsapi.ts.git",
   "author": "Kagami <moe.pascal@gmail.com>",
@@ -17,6 +21,7 @@
     "@types/node": "^10.12.6",
     "@types/prettier": "^1.13.2",
     "bluebird": "^3.5.3",
+    "chalk": "^2.4.1",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.3",
     "gts": "^0.9.0",
