--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/fs-extra": "^5.0.4",
     "@types/glob": "^7.1.1",
     "@types/lodash": "^4.14.118",
+    "@types/micromatch": "^3.1.0",
     "@types/node": "^10.12.6",
     "@types/prettier": "^1.13.2",
     "ajv": "^6.5.5",
@@ -29,6 +30,7 @@
     "husky": "^1.1.4",
     "lint-staged": "^8.0.4",
     "lodash": "^4.17.11",
+    "micromatch": "^3.1.10",
     "prettier": "^1.15.2",
     "quicktype": "^15.0.152",
     "ts-node": "^7.0.1",
