--- a/package.json
+++ b/package.json
@@ -15,15 +15,23 @@
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
     "@types/bluebird": "^3.5.29",
+    "@types/eslint": "^6.1.3",
     "@types/fs-extra": "^8.0.1",
     "@types/glob": "^7.1.1",
     "@types/lodash": "^4.14.148",
     "@types/micromatch": "^3.1.1",
     "@types/node": "^12.12.8",
     "@types/prettier": "^1.18.3",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
+    "@typescript-eslint/parser": "^2.8.0",
     "ajv": "^6.10.2",
     "bluebird": "^3.7.1",
     "chalk": "^3.0.0",
+    "eslint": "^6.7.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.6",
     "gts": "^1.1.0",
@@ -34,9 +42,6 @@
     "prettier": "^1.19.1",
     "quicktype": "^15.0.207",
     "ts-node": "^8.5.2",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.7.2"
   },
   "dependencies": {},
